# ergo-node-rust

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build-addons-deb  build-addons-tar  build-deb  build-tar  ergo-indexer.toml.example  ergo.toml  ergo.toml.example  indexer-install.sh  install.sh  local-dev.toml  mainnet.toml  node-light.toml
.github/workflows/: release.yml
addons/fastsync/: Cargo.toml
addons/fastsync/src/: fetcher.rs  ingest.rs  main.rs  pool.rs  types.rs  wire.rs
addons/indexer/: Cargo.toml
addons/indexer/src/: config.rs  health.rs  lib.rs  main.rs  node_client.rs  parser.rs  sync.rs  types.rs
addons/indexer/src/api/: block_tx_cache.rs  blocks.rs  boxes.rs  debug.rs  mod.rs  stats.rs  tokens.rs  transactions.rs
addons/indexer/src/db/: mod.rs  postgres.rs  sqlite.rs
addons/indexer/src/migrate/: config_update.rs  cursor.rs  hash.rs  liveness.rs  mod.rs  progress.rs  resume.rs  runner.rs
addons/indexer/tests/: migrate_e2e.rs  migratedb_cli.rs
agents/ergo-node-development/: SKILL.md
api/: CLAUDE.md  Cargo.toml
api/src/: handlers.rs  lib.rs  stats.rs  types.rs
chain/: .gitignore  CLAUDE.md  Cargo.toml  README.md
chain/src/: cache.rs  chain.rs  config.rs  difficulty.rs  error.rs  lib.rs  nipopow_proof.rs  pow.rs  section.rs  state_type.rs  sync_info.rs  tests.rs  tracker.rs  voting.rs
debian/: conffiles  control  postinst  postrm  preinst  prerm
deploy/: ergo-indexer.service  ergo-node-rust.service  ergo.toml
deploy/fail2ban/: ergo-node-jail.conf  ergo-node.conf  ergo-node.jail
docs/: next-session-block342964.md  next-session-indexer.md  next-session-known-issues.md  next-session-mainnet.md  next-session-pipeline-gap.md  next-session-profiling-option-b.md  next-session-voting-nipopow-followups.md  operations-manual.md  operator-guide.md  roadmap-to-full-node.md  state-regression-findings.md
docs/design/: 2026-05-22-blocks-to-keep-plan.md  2026-05-22-blocks-to-keep.md
docs/protocol/: ergo-difficulty-adjustment.md  ergo-difficulty-adjustment.yaml  ergo-header-validation.md  ergo-header-validation.yaml  ergo-p2p-spec.yaml  ergo-p2p-wire-format.md  ergo-sync.pcap  jvm-modifier-buffer.md  jvm-sync-exchange.md  jvm-sync-timing.md  jvm-sync-timing.yaml
docs/references/: fast-sync-chainslice.md
docs/superpowers/plans/: 2026-04-01-async-validation-pipeline.md  2026-04-01-sync-machine-rework.md  2026-04-03-deep-reorg.md  2026-04-03-digest-mode-validation.md  2026-04-04-utxo-snapshot-sync.md  2026-04-05-mempool.md  2026-04-05-snapshot-serving.md  2026-04-06-mining-crate.md  2026-04-10-indexer-addon.md  2026-04-12-parallel-validation-pipeline.md  2026-05-25-ergo-indexer-migratedb.md  2026-05-25-p2p-capture-api.md  2026-05-25-p2p-capture-p2p.md
docs/superpowers/specs/: 2026-04-01-async-validation-pipeline-design.md  2026-04-01-delivery-tracker-design.md  2026-04-01-sync-machine-rework-design.md  2026-04-05-snapshot-serving-design.md  2026-04-06-mining-crate-design.md  2026-04-10-indexer-addon-design.md  (+1 more)
examples/: state_inspect.rs
facts/: SPECIAL.md  api.md  chain.md  indexer-migration.md  indexer.md  journal-events.md  jvm-reorg-spec.md  mempool.md  mining.md  nipopow.md  openapi.yaml  p2p-capture.md  p2p-node.md  p2p-peerdb.md  p2p-protocol.md  p2p-routing.md  p2p-transport.md  reorg.md  snapshot.md  state.md  stats.md  store.md  sync.md  validation.md  voting.md
man/: build  ergo-node-rust.8.md  ergo-node-rust.conf.5.md  sharpen.8.md
mempool/: CLAUDE.md  Cargo.toml
mempool/src/: cleanup.rs  expiring_cache.rs  family.rs  lib.rs  pool.rs  process.rs  stats.rs  types.rs  weight.rs
mempool/tests/: expiring_cache_test.rs  pool_test.rs  stats_test.rs  weight_test.rs
mining/: CLAUDE.md  Cargo.toml
mining/src/: candidate.rs  emission.rs  extension.rs  fee.rs  lib.rs  selection.rs  solution.rs  types.rs
mining/tests/: candidate_generator.rs  mine_blocks.rs  transactions_root.rs  work_message_wiring.rs
mining/tests/fixtures/: block-2666-txs.json
p2p/: CLAUDE.md  Cargo.toml  README.md
p2p/deploy/fail2ban/: ergo-proxy.conf
p2p/docs/superpowers/plans/: 2026-03-31-library-crate-refactor.md  2026-03-31-modifier-request-fallback.md  2026-03-31-modifier-validation-hooks.md
p2p/src/: blacklist.rs  config.rs  lib.rs  netif.rs  node.rs  peer_db.rs  types.rs  upnp.rs
p2p/src/capture/: config.rs  dump.rs  handle.rs  mod.rs  pcap.rs  ring.rs  tap.rs
p2p/src/protocol/: address_sanity.rs  counters.rs  messages.rs  mod.rs  peer.rs
p2p/src/routing/: inv_table.rs  latency.rs  mod.rs  router.rs  tracker.rs
p2p/src/transport/: connection.rs  frame.rs  handshake.rs  mod.rs  vlq.rs
p2p/tests/: capture_e2e.rs  integration_test.rs  pcap_verify_test.rs  penalty_format_test.rs  protocol_test.rs  routing_test.rs  transport_test.rs
src/: bridge.rs  lib.rs  main.rs  nipopow_serve.rs  peer_storage_adapter.rs  pipeline.rs  snapshot_serve.rs  snapshot_store.rs  swap_reader.rs  validator.rs
state/: CLAUDE.md  Cargo.toml  README.md
state/src/: lib.rs  storage.rs  tables.rs  undo.rs
state/tests/: journal_events_test.rs  storage_tests.rs
store/: CLAUDE.md  Cargo.toml  README.md
store/src/: lib.rs  redb.rs
sync/: CLAUDE.md  Cargo.toml
sync/src/: apply_state_error.rs  apply_state_tracker.rs  delivery.rs  lib.rs  light_bootstrap.rs  retention.rs  state.rs  sweep_backoff.rs  traits.rs
sync/src/snapshot/: download.rs  manifest.rs  mod.rs  parser.rs  protocol.rs
sync/tests/: journal_events_test.rs  snapshot_download_test.rs  snapshot_manifest_test.rs  snapshot_parser_test.rs  snapshot_protocol_test.rs
tests/: alloc_benchmark.rs  ec_benchmark.rs  nipopow_serve_integration.rs  snapshot_round_trip_test.rs  snapshot_serve_test.rs  snapshot_store_test.rs
tools/: rrd-create.sh  rrd-demo-fill.sh  rrd-graph.sh  rrd-update.sh
validation/: CLAUDE.md  Cargo.toml  SPECIAL.md
validation/src/: digest.rs  lib.rs  oracle_cost.rs  sections.rs  state_changes.rs  tx_validation.rs  utxo.rs  voting.rs
validation/tests/: adproof_dump_ordering_diag.rs  block_version_gate.rs  reset_to.rs
