[workspace]
members = [".", "sync", "validation", "state", "mempool", "api", "mining"]
exclude = ["addons/fastsync", "addons/indexer"]

[package]
name = "ergo-node-rust"
version = "0.2.0"
edition = "2021"
description = "Full Ergo blockchain node in Rust"

[features]
default = ["jemalloc"]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
mimalloc = { version = "0.1", optional = true }
tikv-jemallocator = { version = "0.6", optional = true }
enr-chain = { path = "chain" }
enr-p2p = { path = "p2p" }
enr-state = { path = "state" }
enr-store = { path = "store" }
ergo-api = { path = "api" }
ergo-sync = { path = "sync" }
ergo_avltree_rust = { git = "https://github.com/mwaddip/ergo_avltree_rust.git", rev = "28862a1" }
ergo-chain-types = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "2de209be" }
ergo-lib = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "2de209be" }
ergo-mempool = { path = "mempool" }
ergo-mining = { path = "mining" }
ergo-validation = { path = "validation" }
bytes = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
sigma-ser = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "2de209be" }
toml = "0.8"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.16"
anyhow = "1"
redb = "4"
thiserror = "2"

[dev-dependencies]
sigma-ser = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "2de209be" }
serde_json = "1"
tempfile = "3"
k256 = { version = "0.13.1", features = ["arithmetic"] }
secp256k1 = "0.29"
