[package]
name = "ergo-api"
version = "0.1.0"
edition = "2021"
description = "REST API for ergo-node-rust"

[dependencies]
ergo-chain-types = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "6c765c41" }
ergo-lib = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "6c765c41" }
ergo-mempool = { path = "../mempool" }
ergo-mining = { path = "../mining" }
ergo-validation = { path = "../validation" }
axum = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
blake2 = "0.10"
