[package]
name = "ergo-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "REST API for ergo-node-rust"

[dependencies]
ergo-chain-types = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
ergo-lib = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
ergo-nipopow = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
sigma-ser = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
ergo-mempool = { path = "../mempool" }
ergo-mining = { path = "../mining" }
ergo-validation = { path = "../validation" }
enr-p2p = { path = "../p2p" }
axum = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
blake2 = "0.10"

[dev-dependencies]
ergo-merkle-tree = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
