[package]
name = "ergo-mempool"
version = "0.1.0"
edition = "2021"
description = "In-memory transaction pool for the Ergo Rust node"

[dependencies]
ergo-validation = { path = "../validation" }
ergo-lib = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "6c765c41" }
ergo-chain-types = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "6c765c41" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
