[package]
name = "ergo-mempool"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "In-memory transaction pool for the Ergo Rust node"

[dependencies]
ergo-validation = { path = "../validation" }
ergo-lib = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "a43e54f1" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
ergo-chain-types = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "a43e54f1" }
tempfile = "3"
