[package]
name = "ergo-mining"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Block candidate assembly and PoW solution validation for external miners"

[dependencies]
ergo-lib = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "99a6cfeb" }
ergo-chain-types = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "99a6cfeb" }
ergo-nipopow = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "99a6cfeb" }
ergo-merkle-tree = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "99a6cfeb" }
ergo-validation = { path = "../validation" }
sigma-ser = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "99a6cfeb" }
blake2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
num-bigint = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
