[package]
name = "ergo-mining"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Block candidate assembly and PoW solution validation for external miners"

[dependencies]
ergo-lib = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
ergo-chain-types = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
ergo-nipopow = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
ergo-merkle-tree = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
ergo-validation = { path = "../validation" }
sigma-ser = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
blake2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
num-bigint = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
