[package]
name = "ergo-mining"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Block candidate assembly and PoW solution validation for external miners"

[dependencies]
ergo-lib = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "159d1473" }
ergo-chain-types = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "159d1473" }
ergo-nipopow = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "159d1473" }
ergo-merkle-tree = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "159d1473" }
ergo-validation = { path = "../validation" }
sigma-ser = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "159d1473" }
blake2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
# raw_value: lets WorkMessage emit `b` as a bare arbitrary-precision JSON
# number (the secp256k1-order target does not fit serde's numeric model).
# JSON shaping normally belongs to the api crate, but the wire bytes are
# produced by mining's own Serialize impl, so the escape hatch lives here.
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
num-bigint = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
