[package]
name = "enr-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
blake2 = { version = "0.10", features = ["std"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
igd-next = { version = "0.17", features = ["aio_tokio"] }
if-addrs = "0.15"
thiserror = "2"
memmap2 = "0.9"
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tempfile = "3"
