[package]
name = "ergo-sync"
version = "0.1.0"
edition = "2021"
description = "Chain sync state machine for the Ergo Rust node"

[dependencies]
enr-p2p = { path = "../p2p" }
enr-chain = { path = "../chain" }
ergo-validation = { path = "../validation" }
crossbeam-channel = "0.5"
rayon = "1"
blake2 = "0.10"
bytes = "1"
hex = "0.4"
rand = "0.8"
redb = "4"
thiserror = "2"
tokio = { version = "1", features = ["time", "sync"] }
tracing = "0.1"

[dev-dependencies]
ergo_avltree_rust = { git = "https://github.com/mwaddip/ergo_avltree_rust.git", rev = "28862a1" }
ergo-chain-types = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "c328e3a4" }
tempfile = "3"
