[package]
name = "ergo-validation"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Block validation for the Ergo Rust node"

[dependencies]
ergo-lib = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "a43e54f1" }
ergo-chain-types = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "a43e54f1" }
sigma-ser = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "a43e54f1" }
ergo_avltree_rust = { git = "https://github.com/mwaddip/ergo_avltree_rust.git", rev = "879545c" }
enr-state = { path = "../state" }
rayon = "1"
blake2 = "0.10"
bytes = "1"
hex = "0.4"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
ergotree-interpreter = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "a43e54f1" }
ergotree-ir = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "a43e54f1" }
