[package]
name = "ergo-validation"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Block validation for the Ergo Rust node"

[dependencies]
ergo-lib = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
ergo-chain-types = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
sigma-ser = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
ergo_avltree_rust = "0.1.1"
enr-state = { path = "../state" }
rayon = "1"
blake2 = "0.10"
bytes = "1"
hex = "0.4"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
ergotree-interpreter = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
ergotree-ir = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "75be067f" }
