[workspace]

[package]
name = "ergo-indexer"
version = "0.2.3"
edition = "2021"
description = "Blockchain indexer for ergo-node-rust — rich query API over SQLite or PostgreSQL"

[features]
default = ["sqlite", "jemalloc"]
sqlite = ["dep:rusqlite"]
postgres = ["dep:sqlx"]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]

[dependencies]
# Ergo types — address derivation, register decoding
ergo-chain-types = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "a4ee7442" }
ergo-lib = { git = "https://github.com/mwaddip/sigma-rust.git", rev = "a4ee7442" }

# HTTP client — rustls for static binary
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }

# Allocator — glibc malloc fragments under sustained axum/sqlx churn; jemalloc's
# decommit behavior keeps RSS roughly proportional to live heap. Default-on,
# operators who want glibc can opt out with `--no-default-features --features sqlite`.
tikv-jemallocator = { version = "0.6", optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = ["stats"] }

# Query API
axum = "0.8"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Database backends
rusqlite = { version = "0.33", features = ["bundled"], optional = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
toml = "0.8"
toml_edit = "0.22"
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Crypto (blake2b256 for ergo_tree_hash)
blake2 = "0.10"

# Misc
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "ergo-indexer-migratedb"
path = "src/bin/ergo-indexer-migratedb.rs"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
